[package]
name = "advent_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0.4"
clap = { version = "4.0.29", features = ["derive"] }
inventory = "0.3"
rayon = "1.6.1"
regex = "1.7.0"
